syntax = "proto3";

package pb;

option go_package = "./;pb";

message FindWordByDictionaryRequest {
  string word = 1;
  string user_id = 2;
}

message FindWordByDictionaryResponse { repeated WordMeaning word_meanings = 1; }

message Pronunciation {
  string text = 1;
  string uk_audio_url = 2;
  string us_audio_url = 3;
}

message Sentence {
  string audio_url = 1;
  string text = 2;
}

message Example {
  string pattern = 1;
  repeated Sentence examples = 2;
}

message CreateFavoriteWordMeaningRequest {
  string user_id = 1;
  string word_meaning_id = 2;
}

message CreateFavoriteWordMeaningResponse {
  string favorite_word_meaning_id = 1;
}

message DeleteFavoriteWordMeaningRequest {
  string favorite_word_meaning_id = 1;
  string user_id = 2;
}

message DeleteFavoriteWordMeaningResponse {}

message FindFavoriteWordMeaningsRequest {
  int32 page_index = 1;
  int32 page_size = 2;
  string user_id = 3;
  string word = 4;
}

message FindFavoriteWordMeaningsResponse {
  int32 total = 1;
  int32 page_count = 2;
  repeated WordMeaning favorite_word_meanings = 3;
}

message FindRandomFavoriteWordMeaningsRequest {
  string user_id = 1;
  int32 size = 2;
}

message FindRandomFavoriteWordMeaningsResponse {
  repeated WordMeaning favorite_word_meanings = 1;
}

message WordMeaning {
  string id = 1 [ json_name = "_id" ];
  string word = 2;
  string part_of_speech = 3;
  string gram = 4;
  Pronunciation pronunciation = 5;
  string def_gram = 6;
  string definition = 7;
  repeated Example examples = 8;
  int32 order_by_no = 9;
  repeated string query_by_words = 10;
  string favorite_word_meaning_id = 11;
}

service WordService {
  rpc FindWordByDictionary(FindWordByDictionaryRequest)
      returns (FindWordByDictionaryResponse);
  rpc CreateFavoriteWordMeaning(CreateFavoriteWordMeaningRequest)
      returns (CreateFavoriteWordMeaningResponse);
  rpc DeleteFavoriteWordMeaning(DeleteFavoriteWordMeaningRequest)
      returns (DeleteFavoriteWordMeaningResponse);
  rpc FindFavoriteWordMeanings(FindFavoriteWordMeaningsRequest)
      returns (FindFavoriteWordMeaningsResponse);
  rpc FindRandomFavoriteWordMeanings(FindRandomFavoriteWordMeaningsRequest)
      returns (FindRandomFavoriteWordMeaningsResponse);
}
